miniconda3/envs/iraf27/iraf_extern/xray/ximages/imcalc/y.output

state 0
	$accept : _command $end 
	command : _    (1)

	SEMICOLON  shift 8
	NEWLINE  shift 9
	IDENTIFIER  shift 13
	YYEOF  shift 7
	QUIT  shift 6
	PRINT  shift 11
	CMD  shift 12
	.  reduce 1

	command  goto 1
	eost  goto 2
	assign  goto 3
	print  goto 4
	cmd  goto 5
	image  goto 10

state 1
	$accept :  command_$end 

	$end  accept
	.  error


state 2
	command :  eost_    (2)

	.  reduce 2


state 3
	command :  assign_eost 

	SEMICOLON  shift 8
	NEWLINE  shift 9
	.  error

	eost  goto 14

state 4
	command :  print_eost 

	SEMICOLON  shift 8
	NEWLINE  shift 9
	.  error

	eost  goto 15

state 5
	command :  cmd_eost 

	SEMICOLON  shift 8
	NEWLINE  shift 9
	.  error

	eost  goto 16

state 6
	command :  QUIT_eost 

	SEMICOLON  shift 8
	NEWLINE  shift 9
	.  error

	eost  goto 17

state 7
	command :  YYEOF_    (7)

	.  reduce 7


state 8
	eost :  SEMICOLON_    (11)

	.  reduce 11


state 9
	eost :  NEWLINE_    (12)

	.  reduce 12


state 10
	assign :  image_EQUALS expr 

	EQUALS  shift 18
	.  error


state 11
	print :  PRINT_expr 

	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 19
	image  goto 20

state 12
	cmd :  CMD_    (8)

	.  reduce 8


state 13
	image :  IDENTIFIER_    (41)

	.  reduce 41


state 14
	command :  assign eost_    (3)

	.  reduce 3


state 15
	command :  print eost_    (4)

	.  reduce 4


state 16
	command :  cmd eost_    (5)

	.  reduce 5


state 17
	command :  QUIT eost_    (6)

	.  reduce 6


state 18
	assign :  image EQUALS_expr 

	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 28
	image  goto 20

state 19
	print :  PRINT expr_    (9)
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	BAND  shift 34
	BOR  shift 35
	BXOR  shift 36
	PLUS  shift 29
	MINUS  shift 30
	STAR  shift 31
	SLASH  shift 32
	EXPON  shift 33
	QUEST  shift 45
	LT  shift 39
	GT  shift 40
	LE  shift 41
	EQ  shift 43
	NE  shift 44
	LAND  shift 37
	LOR  shift 38
	GE  shift 42
	.  reduce 9


state 20
	expr :  image_    (13)

	.  reduce 13


state 21
	expr :  FLOAT_    (14)

	.  reduce 14


state 22
	expr :  INTEGER_    (15)

	.  reduce 15


state 23
	expr :  MINUS_expr 

	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 46
	image  goto 20

state 24
	expr :  BNOT_expr 

	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 47
	image  goto 20

state 25
	expr :  LNOT_expr 

	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 48
	image  goto 20

state 26
	expr :  IDENTIFIER_( arglist ) 
	image :  IDENTIFIER_    (41)

	(  shift 49
	.  reduce 41


state 27
	expr :  (_expr ) 

	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 50
	image  goto 20

state 28
	assign :  image EQUALS expr_    (10)
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	BAND  shift 34
	BOR  shift 35
	BXOR  shift 36
	PLUS  shift 29
	MINUS  shift 30
	STAR  shift 31
	SLASH  shift 32
	EXPON  shift 33
	QUEST  shift 45
	LT  shift 39
	GT  shift 40
	LE  shift 41
	EQ  shift 43
	NE  shift 44
	LAND  shift 37
	LOR  shift 38
	GE  shift 42
	.  reduce 10


state 29
	expr :  expr PLUS_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 51

state 30
	expr :  expr MINUS_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 52

state 31
	expr :  expr STAR_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 53

state 32
	expr :  expr SLASH_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 54

state 33
	expr :  expr EXPON_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 55

state 34
	expr :  expr BAND_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 56

state 35
	expr :  expr BOR_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 57

state 36
	expr :  expr BXOR_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 58

state 37
	expr :  expr LAND_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 59

state 38
	expr :  expr LOR_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 60

state 39
	expr :  expr LT_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 61

state 40
	expr :  expr GT_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 62

state 41
	expr :  expr LE_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 63

state 42
	expr :  expr GE_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 64

state 43
	expr :  expr EQ_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 65

state 44
	expr :  expr NE_opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 66

state 45
	expr :  expr QUEST_opnl expr COLON opnl expr 
	opnl : _    (42)

	.  reduce 42

	opnl  goto 67

state 46
	expr :  MINUS expr_    (16)
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	.  reduce 16


state 47
	expr :  BNOT expr_    (17)
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	.  reduce 17


state 48
	expr :  LNOT expr_    (18)
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	.  reduce 18


state 49
	expr :  IDENTIFIER (_arglist ) 
	arglist : _    (38)

	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  reduce 38

	expr  goto 69
	image  goto 20
	arglist  goto 68

state 50
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 
	expr :  ( expr_) 

	BAND  shift 34
	BOR  shift 35
	BXOR  shift 36
	PLUS  shift 29
	MINUS  shift 30
	STAR  shift 31
	SLASH  shift 32
	EXPON  shift 33
	QUEST  shift 45
	LT  shift 39
	GT  shift 40
	LE  shift 41
	EQ  shift 43
	NE  shift 44
	LAND  shift 37
	LOR  shift 38
	GE  shift 42
	)  shift 70
	.  error


state 51
	expr :  expr PLUS opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 71
	image  goto 20

state 52
	expr :  expr MINUS opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 73
	image  goto 20

state 53
	expr :  expr STAR opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 74
	image  goto 20

state 54
	expr :  expr SLASH opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 75
	image  goto 20

state 55
	expr :  expr EXPON opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 76
	image  goto 20

state 56
	expr :  expr BAND opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 77
	image  goto 20

state 57
	expr :  expr BOR opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 78
	image  goto 20

state 58
	expr :  expr BXOR opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 79
	image  goto 20

state 59
	expr :  expr LAND opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 80
	image  goto 20

state 60
	expr :  expr LOR opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 81
	image  goto 20

state 61
	expr :  expr LT opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 82
	image  goto 20

state 62
	expr :  expr GT opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 83
	image  goto 20

state 63
	expr :  expr LE opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 84
	image  goto 20

state 64
	expr :  expr GE opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 85
	image  goto 20

state 65
	expr :  expr EQ opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 86
	image  goto 20

state 66
	expr :  expr NE opnl_expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 87
	image  goto 20

state 67
	expr :  expr QUEST opnl_expr COLON opnl expr 
	opnl :  opnl_NEWLINE 

	NEWLINE  shift 72
	FLOAT  shift 21
	INTEGER  shift 22
	IDENTIFIER  shift 26
	BNOT  shift 24
	MINUS  shift 23
	LNOT  shift 25
	(  shift 27
	.  error

	expr  goto 88
	image  goto 20

state 68
	expr :  IDENTIFIER ( arglist_) 
	arglist :  arglist_, expr 

	)  shift 89
	,  shift 90
	.  error


state 69
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 
	arglist :  expr_    (39)

	BAND  shift 34
	BOR  shift 35
	BXOR  shift 36
	PLUS  shift 29
	MINUS  shift 30
	STAR  shift 31
	SLASH  shift 32
	EXPON  shift 33
	QUEST  shift 45
	LT  shift 39
	GT  shift 40
	LE  shift 41
	EQ  shift 43
	NE  shift 44
	LAND  shift 37
	LOR  shift 38
	GE  shift 42
	.  reduce 39


state 70
	expr :  ( expr )_    (37)

	.  reduce 37


state 71
	expr :  expr_PLUS opnl expr 
	expr :  expr PLUS opnl expr_    (19)
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	STAR  shift 31
	SLASH  shift 32
	EXPON  shift 33
	.  reduce 19


state 72
	opnl :  opnl NEWLINE_    (43)

	.  reduce 43


state 73
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr MINUS opnl expr_    (20)
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	STAR  shift 31
	SLASH  shift 32
	EXPON  shift 33
	.  reduce 20


state 74
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr STAR opnl expr_    (21)
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	EXPON  shift 33
	.  reduce 21


state 75
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr SLASH opnl expr_    (22)
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	EXPON  shift 33
	.  reduce 22


state 76
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr EXPON opnl expr_    (23)
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	.  reduce 23


state 77
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr BAND opnl expr_    (24)
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	PLUS  shift 29
	MINUS  shift 30
	STAR  shift 31
	SLASH  shift 32
	EXPON  shift 33
	LT  shift 39
	GT  shift 40
	LE  shift 41
	EQ  shift 43
	NE  shift 44
	GE  shift 42
	.  reduce 24


state 78
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr BOR opnl expr_    (25)
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	BAND  shift 34
	BXOR  shift 36
	PLUS  shift 29
	MINUS  shift 30
	STAR  shift 31
	SLASH  shift 32
	EXPON  shift 33
	LT  shift 39
	GT  shift 40
	LE  shift 41
	EQ  shift 43
	NE  shift 44
	GE  shift 42
	.  reduce 25


state 79
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr BXOR opnl expr_    (26)
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	BAND  shift 34
	PLUS  shift 29
	MINUS  shift 30
	STAR  shift 31
	SLASH  shift 32
	EXPON  shift 33
	LT  shift 39
	GT  shift 40
	LE  shift 41
	EQ  shift 43
	NE  shift 44
	GE  shift 42
	.  reduce 26


state 80
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr LAND opnl expr_    (27)
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	BAND  shift 34
	BOR  shift 35
	BXOR  shift 36
	PLUS  shift 29
	MINUS  shift 30
	STAR  shift 31
	SLASH  shift 32
	EXPON  shift 33
	LT  shift 39
	GT  shift 40
	LE  shift 41
	EQ  shift 43
	NE  shift 44
	GE  shift 42
	.  reduce 27


state 81
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr LOR opnl expr_    (28)
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	BAND  shift 34
	BOR  shift 35
	BXOR  shift 36
	PLUS  shift 29
	MINUS  shift 30
	STAR  shift 31
	SLASH  shift 32
	EXPON  shift 33
	LT  shift 39
	GT  shift 40
	LE  shift 41
	EQ  shift 43
	NE  shift 44
	LAND  shift 37
	GE  shift 42
	.  reduce 28


state 82
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr LT opnl expr_    (29)
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	PLUS  shift 29
	MINUS  shift 30
	STAR  shift 31
	SLASH  shift 32
	EXPON  shift 33
	LT  error
	GT  error
	LE  error
	GE  error
	.  reduce 29


state 83
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr GT opnl expr_    (30)
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	PLUS  shift 29
	MINUS  shift 30
	STAR  shift 31
	SLASH  shift 32
	EXPON  shift 33
	LT  error
	GT  error
	LE  error
	GE  error
	.  reduce 30


state 84
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr LE opnl expr_    (31)
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	PLUS  shift 29
	MINUS  shift 30
	STAR  shift 31
	SLASH  shift 32
	EXPON  shift 33
	LT  error
	GT  error
	LE  error
	GE  error
	.  reduce 31


state 85
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr GE opnl expr_    (32)
	expr :  expr_EQ opnl expr 
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 

	PLUS  shift 29
	MINUS  shift 30
	STAR  shift 31
	SLASH  shift 32
	EXPON  shift 33
	LT  error
	GT  error
	LE  error
	GE  error
	.  reduce 32


state 86
	expr :  expr_PLUS opnl expr 
	expr :  expr_MINUS opnl expr 
	expr :  expr_STAR opnl expr 
	expr :  expr_SLASH opnl expr 
	expr :  expr_EXPON opnl expr 
	expr :  expr_BAND opnl expr 
	expr :  expr_BOR opnl expr 
	expr :  expr_BXOR opnl expr 
	expr :  expr_LAND opnl expr 
	expr :  expr_LOR opnl expr 
	expr :  expr_LT opnl expr 
	expr :  expr_GT opnl expr 
	expr :  expr_LE opnl expr 
	expr :  expr_GE opnl expr 
	expr :  expr_EQ opnl expr 
	expr :  expr EQ opnl expr_    (33)
	expr :  expr_NE opnl expr 
	expr :  expr_QUEST opnl expr COLON opnl expr 
